--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
+    "date-fns": "^2.8.1",
     "expo": "~36.0.0",
     "prop-types": "^15.7.2",
     "react": "~16.9.0",
