Add ENV config, connect local API, add `withDataFetching`, refactor `HistoryRows` component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.5",
     "date-fns": "^2.8.1",
     "expo": "~36.0.0",
+    "expo-apple-authentication": "~2.0.0",
     "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -21,8 +22,7 @@
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.1",
-    "expo-apple-authentication": "~2.0.0"
+    "react-navigation-stack": "^2.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
