--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.8.1",
     "expo": "~36.0.0",
     "expo-apple-authentication": "~2.0.0",
+    "firebase": "^7.8.1",
     "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
