--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-svg": "^9.7.1",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.1"
