--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-svg": "^9.7.1",
     "react-native-svg-charts": "^5.3.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.1"
+    "react-navigation-stack": "^2.0.1",
+    "expo-permissions": "~8.0.0",
+    "expo-keep-awake": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
