--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.1",
     "expo-permissions": "~8.0.0",
-    "expo-keep-awake": "~8.0.0"
+    "expo-keep-awake": "~8.0.0",
+    "expo-av": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
