--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@react-native-community/masked-view": "^0.1.5",
     "date-fns": "^2.8.1",
     "expo": "~36.0.0",
+    "expo-av": "~8.0.0",
+    "expo-keep-awake": "^8.0.0",
+    "expo-permissions": "~8.0.0",
     "firebase": "^7.13.2",
     "prop-types": "^15.7.2",
     "react": "~16.9.0",
@@ -23,10 +26,7 @@
     "react-native-svg": "^9.7.1",
     "react-native-svg-charts": "^5.3.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.1",
-    "expo-permissions": "~8.0.0",
-    "expo-keep-awake": "~8.0.0",
-    "expo-av": "~8.0.0"
+    "react-navigation-stack": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
